test/scanner/good6.bminor
x: integer = 65;
y: char = 'A';
if(x>y) // error: x and y are of different types!